<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- navigation menu -->
    <string name="nav_home">Home</string>
    <string name="nav_library">Library</string>
    <string name="nav_scanbooks">Scan Boooks</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>

    <!-- shared preferences keys and default values -->
    <string name="user_access_email">user_access_email</string>
    <string name="user_access_email_default"></string>
    <string name="user_password">user_password</string>
    <string name="user_password_default"></string>
    <string name="user_name">user_name</string>
    <string name="user_name_default"></string>
    <string name="user_surname">user_surname</string>
    <string name="user_surname_default"></string>
    <string name="user_book_count">user_book_count</string>
    <string name="user_book_count_default"></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- SCANNING -->
    <string name="scan_isbn">Scan a ISBN</string>
    <string name="no_scandata">No book scan data received!</string>
    <string name="found">found</string>
    <string name="search_for_books">Searching for books...</string>
    <string name="book_alr_added">You have already added this book</string>
    <string name="booksfinder_error">Sorry, no book found</string>
    <string name="wait">Wait</string>

    <!-- BOOK DETAIL -->
    <string name="del_book">Delete Book</string>
    <string name="add_book">Add Book</string>
    <string name="title_activity_book_detail">BookDetail</string>
    <string name="book_pages">pages</string>

    <!-- SETTINGS FRAGMENT -->
    <string name="settings_title">Settings</string>

    <string name="pref_header_general">General</string>

    <string name="displayinfo_title">User information</string>

    <string name="username_title">Name</string>
    <string name="usersurname_title">Surname</string>
    <string name="useremail_title">Email</string>
    <string name="userpassword_title">Password</string>

    <string name="general_sett_title">General Settings</string>

    <string name="change_username">Change Name</string>
    <string name="change_usersurname">Change Surname</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>

    <string name="alert_ok">Ok</string>
    <string name="alert_cancel">Cancel</string>

    <string name="invalid_name">Error, name must contain only letters</string>
    <string name="invalid_surname">Error, surname must contain only letters</string>
    <string name="invalid_email">Error, invalid email</string>
    <string name="invalid_password">Error, invalid password</string>

    <!-- HOME FRAGMENT -->
    <string name="app_title">BookShelf</string>
    <string name="app_subtitle">Your personal library</string>

    <string name="scan_book_prompt">Scan an ISBN</string>
    <string name="scan_a_book">Scan a book</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="delete_confirm">Are you sure ?</string>
    <string name="error_add">Error on adding the book, try again</string>
    <string name="error_ask">Error on asking the book, try again</string>
    <string name="error_delete">Error on deleting the book, try again</string>

    <string name="success_add">Book succesfully added!</string>
    <string name="success_delete">Book succesfully deleted!</string>
    <string name="title_activity_shelf">ShelfActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
