<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white_48dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_view_week_white_48dp"
            android:title="@string/nav_library" />
        <item
            android:id="@+id/nav_scanbooks"
            android:icon="@drawable/ic_scan"
            android:title="@string/nav_scanbooks" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_48dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_logout" />
    </group>
</menu>
