<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.polimi.bookshelf.fragments.HomeFragment">

    <ImageView
        android:id="@+id/homeImage"
        android:contentDescription="@string/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-115dp"
        android:src="@drawable/book_shelf" />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/app_title"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/homeImage"
        android:layout_marginTop="-150dp"
        android:textColor="#222"
        android:background="@drawable/title_container"
        android:textSize="@dimen/app_title_txtsize"/>

    <TextView
        android:id="@+id/app_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/app_title"
        android:textColor="#555"
        android:textSize="@dimen/app_subtitle_txtsize"/>

    <View
        android:id="@+id/ruler"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/app_subtitle"
        android:background="#CCC"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ruler"
        android:text="@string/scan_a_book"
        android:padding="10dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button_border"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>

